Integer.valueOf(int) is not available on JDK 1.4